--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,58 @@
-.App {
-  text-align: center;
+:root {
+  --turquesa: #00ffd5;
+  --gris: #50555b31;
+  --turquesaoscuro: #45a29e;
+  --azuloscuro: #0c1014;
+  --blanco: white;
+  --grisClar: rgb(232, 250, 255);
+  --grisoscuro: #38393b;
+  --black: rgba(0, 0, 0, 0.856);
+  --backgroundDark: linear-gradient(
+    90deg,
+    var(--grisoscuro) 0%,
+    var(--azuloscuro) 100%
+  );
+  --backgroundClear: linear-gradient(
+    90deg,
+    var(--blanco) 0%,
+    var(--grisClar) 100%
+  );
 }
 
+.Container {
+  text-align: center;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  height: 100%;
+  color: var(--blanco);
+  background-image: var(--backgroundDark);
+}
+
+.Container-body {
+  display: flex;
+  flex: 1;
+  margin: 3%;
+  border: 4px solid var(--turquesa);
+  border-radius: 8px;
+  background-color: var(--gris);
+  box-shadow: var(--black) 0px 30px 90px;
+}
+.Container-content {
+  flex: 1;
+}
+
+.Container-nav,
+.Container-ads {
+  /* 12em is the width of the columns */
+  flex: 0 0 12em;
+}
+
+.Container-nav {
+  /* put the nav on the left */
+  order: -1;
+}
+/*
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +87,4 @@
     transform: rotate(360deg);
   }
 }
+*/
