--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,3 @@
-:root {
-  --turquesa: #00ffd5;
-  --gris: #50555b31;
-  --turquesaoscuro: #45a29e;
-  --azuloscuro: #0c1014;
-  --blanco: white;
-  --grisClar: rgb(232, 250, 255);
-  --grisoscuro: #38393b;
-  --black: rgba(0, 0, 0, 0.856);
-  --backgroundDark: linear-gradient(
-    90deg,
-    var(--grisoscuro) 0%,
-    var(--azuloscuro) 100%
-  );
-  --backgroundClear: linear-gradient(
-    90deg,
-    var(--blanco) 0%,
-    var(--grisClar) 100%
-  );
-}
-
 .Container {
   text-align: center;
   display: flex;
@@ -32,26 +11,62 @@
 .Container-body {
   display: flex;
   flex: 1;
+  flex-wrap: wrap;
+  flex-direction: column;
   margin: 3%;
   border: 4px solid var(--turquesa);
   border-radius: 8px;
   background-color: var(--gris);
   box-shadow: var(--black) 0px 30px 90px;
 }
-.Container-content {
+
+.Container-body-under {
+  display: flex;
+  flex-direction: column;
   flex: 1;
+}
+
+.Container-content {
+  flex-grow: 1;
 }
 
 .Container-nav,
 .Container-ads {
-  /* 12em is the width of the columns */
-  flex: 0 0 12em;
+  flex: 0 0 1em;
+}
+
+.Container-ads {
+  font-size: 1.1em;
 }
 
 .Container-nav {
-  /* put the nav on the left */
   order: -1;
+  display: flex;
+  text-align: left;
+  justify-content: flex-end;
+  column-gap: 1rem;
+  padding: 5px 15px 0 0;
 }
+
+.Container-nav a {
+  text-decoration: none;
+  color: var(--turquesa);
+  font-size: 1.1em;
+}
+
+.Container-nav a:hover {
+  color: var(--turquesaOscuro);
+}
+
+.content-Home {
+  margin-top: auto 0 auto 0;
+}
+
+.content-programador {
+  color: var(--turquesa);
+  font-size: 50px;
+}
+
 /*
 .App-logo {
   height: 40vmin;
