--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
-  --turquesa: #00ffd5;
-  --turquesaOscuro: #45a29e;
+  --principal: #00ffd5;
+  --turquesaOscuro: #51bbb6;
   --azulOscuro: #0c1014;
   --blanco: white;
   --grisClaro: rgb(232, 250, 255);
